* Provide rake db:gis:setup task. (Pull request by Cody Russell)
* Modifications for compatibility with postgres_ext. (Pull request by legendetm)
* SpatialTableDefinition properly subclasses the Postgres-specific table definition class, if available. (Pull request by Joe Noon)
* Database creation script no longer fails if the username includes weird characters. (Contributed by Toms Mikoss)

=== 0.5.0 / 2012-12-12

Thanks to the many who have submitted pull requests. A bunch of them are in this release. Special thanks to Nick Muerdter, who succeeded in porting the adapter to work with the JDBC Postgres adapter in JRuby, and also got Travis up and running for the project.

* Add JRuby compatibility with the activerecord-jdbcpostgresql-adapter gem. (Pull request by Nick Muerdter)
* Allow WKT to be to be specified as a string-like object rather than having to be a String. (Pull request by Bryan Larsen)
* Ignore postgis_topology tables 'layer' and 'topology' in rake db:schema:dump. (Pull request by Greg Phillips)
* Create schemas specified in schema_search_path only if they don't exist. (Pull request by legendetm)
* Force the postgis_topology extension be created in the topology schema. (Pull request by Dimitri Roche)
* Specifically set the ownership of the postgis related tables to the regular user. (Pull request by corneverbruggen)
* The gemspec no longer includes the timestamp in the version, so that bundler can pull from github. (Reported by corneverbruggen)
* Update tests for PostGIS 2.0 compatibility.
* Travis-CI integration. (Pull request by Nick Muerdter)
* Add a missing srid in the Readme. (Pull request by gouthamvel)
* Readme clarifies that BoundingBox objects can be used in a query only for projected coordinate systems. (Reported by Tee Parham)
* Update URLs to point to new website.

=== 0.4.3 / 2012-04-13

* Rake tasks failed on Rails 3.0.x because of an issue with rgeo-activerecord pre-0.4.5. Now we require the fixed version.

=== 0.4.2 / 2012-04-12
