@@ -5,6 +5,7 @@
 * Modifications for compatibility with postgres_ext. (Pull request by legendetm)
 * SpatialTableDefinition properly subclasses the Postgres-specific table definition class, if available. (Pull request by Joe Noon)
 * Database creation script no longer fails if the username includes weird characters. (Contributed by Toms Mikoss)
+* Updates for compatibility with jdbc-postgres 9.2.1002.1
 
 === 0.5.0 / 2012-12-12
 
